--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         <div class="section-title">
           <h2>À propos de moi</h2>
-          <p>entrer reel description simple</p>
+          <p>Je m'appelle Avi Elbaz, je suis étudiant en BTS de Service Informatique aux Organisations et je souhaite integré le developpement dans le jeu vidéo.</p>
         </div>
 
         <div class="row">
@@ -89,9 +89,6 @@
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Web Developpeur.</h3>
-            <p class="fst-italic">
-              Mini mini desc de ce que je suis
-            </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
@@ -108,7 +105,10 @@
               </div>
             </div>
             <p>
-              re desc de jsp quoi tu choisis de garder ou non
+              J'étudie plusieurs langages depuis 2ans comme le PHP ou le JAVA ce qui m'a permis d'aquérir des bases et des reflèxes dans le domaine de la programmation.
+              C'est pourquoi je souhaite approfondir mes connaissances afin de réaliser mon rêve de programmeur dans le jeu vidéo.
+              <br>
+              <a href="assets/img/CV.pdf">Mon CV</a>
             </p>
           </div>
         </div>
@@ -116,61 +116,13 @@
       </div>
     </section><!-- End About Section -->
 
-    <!-- ======= Facts Section ======= -->
-    <section id="facts" class="facts">
-      <div class="container">
-
-        <div class="section-title">
-          <h2>Stats</h2>
-          <p>Desc des exploits ?</p>
-        </div>
-
-        <div class="row no-gutters">
-
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
-            <div class="count-box">
-              <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Happy Clients</strong> consequuntur quae</p>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
-            <div class="count-box">
-              <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Projects</strong> adipisci atque cum quia aut</p>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
-            <div class="count-box">
-              <i class="bi bi-headset"></i>
-              <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Hours Of Support</strong> aut commodi quaerat</p>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
-            <div class="count-box">
-              <i class="bi bi-people"></i>
-              <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Hard Workers</strong> rerum asperiores dolor</p>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Facts Section -->
-
     <!-- ======= Skills Section ======= -->
     <section id="skills" class="skills section-bg">
       <div class="container">
 
         <div class="section-title">
           <h2>Compétences</h2>
-          <p>Desc des competences</p>
+          <p>J'ai fais au cours de mes études plusieurs programme en PHP, PYTHON, HTML ou JAVA. Voici donc ma vision de maitrise sur ces langages en pourcentages.</p>
         </div>
 
         <div class="row skills-content">
@@ -178,16 +130,16 @@
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">HTML <i class="val">40%</i></span>
+              <span class="skill">HTML <i class="val">36%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="36" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">CSS <i class="val">10%</i></span>
+              <span class="skill">PYTHON <i class="val">68%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="68" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -197,16 +149,16 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">JavaScript <i class="val">10%</i></span>
+              <span class="skill">JAVA <i class="val">42%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="42" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">PHP <i class="val">90%</i></span>
+              <span class="skill">PHP <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -222,8 +174,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Résumé</h2>
-          <p>Résumé de moi</p>
+          <h2>Résumé Général</h2>
         </div>
 
         <div class="row">
@@ -231,11 +182,11 @@
             <h3 class="resume-title">Résumé</h3>
             <div class="resume-item pb-0">
               <h4>Elbaz Avi</h4>
-              <p><em>Résumé de qui je suis</em></p>
+              <p>Je suis un jeune adulte passioné de jeux vidéo et de programmations, je souhaite à mon tour en programmer pour apporter du bonheur aux joueurs.</p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>31 rue Jean Pierre Timbaud, Drancy, France</li>
+                <li>06 95 09 14 00</li>
+                <li>avie2204@gmail.com</li>
               </ul>
             </div>
 
@@ -244,7 +195,8 @@
               <h4>BTS SIO Slam</h4>
               <h5>2021 - 2023</h5>
               <p><em>Lycée ORT Daniel Mayer, Montreuil</em></p>
-              <p>Explication du parcourt</p>
+              <p>J'ai débuté mon apprentissage informatique en 2021 dans l'établissement ORT Daniel Mayer, où mes proffesseurs m'ont apprit la logique algorythmique et
+                comment programmer différents langages.</p>
             </div>
 
           </div>
@@ -254,6 +206,8 @@
               <h4>Stage de gestion de base de donnée</h4>
               <h5>2022</h5>
               <p><em>LVMH, Paris 8ème</em></p>
+              <p>Lors de ma première année de BTS je suis partie en stage de 1 mois dans l'entreprise LVMH où je me suis occupé de la gestion de certaines de leurs données.
+              Grace à ce stage j'ai beaucoup appris sur les bases de données ainsi que sur leur fonctionnement.</p>
               <ul>
                 <li>Gestion de base de données via Sql Server Management Studio</li>
                 <div class="col-lg-4" data-aos="fade-right">
