--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -107,18 +107,14 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Project information</h3>
-              <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
-              </ul>
+              <h3>Information du projet</h3>
             </div>
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
+              <h2></h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                Pendant mes études j'ai programmé avec deux de mes amis, un site web en PHP ainsi qu'une application JAVA d'une auto-école.
+                Nous devions créé des pages pour la réservation de leçon de conduite, la consultation du planning en fonction de la personne connecter, les statistique pour
+                un apprentie ainsi que pour la gestion général par un administrateur.
               </p>
             </div>
           </div>
