--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -72,10 +72,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Détails Projets</h2>
+          <h2>Détails du projets</h2>
           <ol>
             <li><a href="index.html">Accueil</a></li>
-            <li>Détails Projets</li>
+            <li>Détails du projets</li>
           </ol>
         </div>
 
@@ -83,7 +83,7 @@
     </section><!-- End Breadcrumbs -->
 
     <!-- ======= Portfolio Details Section ======= -->
-    <section id="portfolio-details" class="portfolio-details">
+    <section id="LyaCar" class="portfolio-details">
       <div class="container">
 
         <div class="row gy-4">
@@ -94,6 +94,47 @@
 
                 <div class="swiper-slide">
                   <img src="assets/img/projets/LyaCar.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/projets/autoecole.png" alt="">
+                </div>
+
+              </div>
+              <div class="swiper-pagination"></div>
+            </div>
+          </div>
+
+          <div class="col-lg-4">
+            <div class="portfolio-info">
+              <h3>Information du projet</h3>
+            </div>
+            <div class="portfolio-description">
+              <h2></h2>
+              <p>
+                Pendant mes études j'ai programmé avec deux de mes amis, un site web en PHP ainsi qu'une application JAVA d'une auto-école.
+                Nous devions créé des pages pour la réservation de leçon de conduite, la consultation du planning en fonction de la personne connecter, les statistique pour
+                un apprentie ainsi que pour la gestion général par un administrateur.
+              </p>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </section>
+
+    <section id="autoecole" class="portfolio-details">
+      <div class="container">
+
+        <div class="row gy-4">
+
+          <div class="col-lg-8">
+            <div class="portfolio-details-slider swiper">
+              <div class="swiper-wrapper align-items-center">
+
+                <div class="swiper-slide">
+                  <img src="assets/img/projets/autoecole.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
