debut d'ajout de 2eme stage

--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>À propos de moi</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Résumé</span></a></li>
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Projets</span></a></li>
-          <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contacte</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
     </div>
@@ -99,7 +98,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>19 ans</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Diplôme:</strong> <span>Bachelor</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Diplôme:</strong> <span>Baccalauréat</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>avie2204@gmail.com</span></li>
                 </ul>
               </div>
@@ -203,29 +202,38 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Experience Professionelle</h3>
             <div class="resume-item">
-              <h4>Stage de gestion de base de donnée</h4>
+              <h4>Stage en gestion de base de donnée</h4>
               <h5>2022</h5>
+              <div class="col-lg-4" data-aos="fade-right">
+                <img src="assets/img/lvmh-logo.jpg" class="img-fluid" alt="">
+              </div>
               <p><em>LVMH, Paris 8ème</em></p>
               <p>Lors de ma première année de BTS je suis partie en stage de 1 mois dans l'entreprise LVMH où je me suis occupé de la gestion de certaines de leurs données.
               Grace à ce stage j'ai beaucoup appris sur les bases de données ainsi que sur leur fonctionnement.</p>
               <ul>
                 <li>Gestion de base de données via Sql Server Management Studio</li>
-                <div class="col-lg-4" data-aos="fade-right">
+                <div class="col-lg-2" data-aos="fade-right">
                   <img src="assets/img/SSMSicon.png" class="img-fluid" alt="">
                 </div>
               </ul>
             </div>
-            <!--<div class="resume-item">
-              <h4>STAGE DE 2EME ANNEE</h4>
+            <div class="resume-item">
+              <h4>Stage Création de visuels et d'un site web</h4>
               <h5>2023</h5>
-              <p><em> ,Montreuil</em></p>
+              <div class="col-lg-3" data-aos="fade-right">
+                <img src="assets/img/bokertovagencylogo.png" class="img-fluid" alt="">
+              </div>
+              <p><em>Boker Tov Agency, Montreuil</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <p>Pendant ma 2ème année de BTS j'ai effectué un stage dans l'entreprise Boker Tov Agency pour programmer un site web et concevoir des visuels publicitaires.</p>
+                <li>Conception de visuels</li>
+                <p>J'ai utilisé le site internet Canva.com afin de concevoir des visuels attrayants et vendeurs pour diverts petites entreprises pour qu'ils puissent avoir
+                  une base publicitaire et ainsi se faire connaitre grace aux résaux sociaux.</p>
+                <li>Programation d'un site web</li>
+                <p>Cette tache consistait à programmer un site internet uniquement avec le Framework Symfony 5 afin d'avoir un site bien structuré et sécurisé. Malgré quelques
+                erreurs durant la programmation, le site fonctionne parfaitement même si non finit, cela m'a aidé à mieux maitrise Symfony 5.</p>
               </ul>
-            </div>-->
+            </div>
           </div>
         </div>
 
