--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
         <div class="section-title">
           <h2>Compétences</h2>
           <p>J'ai fais au cours de mes études plusieurs programme en PHP, PYTHON, HTML ou JAVA. Voici donc ma vision de maitrise sur ces langages en pourcentages.</p>
+          <a href="assets/img/Tableau_de_competences.pdf">Tableau de compétences</a>
         </div>
 
         <div class="row skills-content">
@@ -198,7 +199,20 @@
                 comment programmer différents langages.</p>
             </div>
 
+            <h3 class="resume-title">Formation</h3>
+            <div class="resume-item">
+              <h4>Apprentissage UNITY</h4>
+              <h5>10/02/2022 - 15/02/2022</h5>
+              <div class="col-lg-2" data-aos="fade-right">
+                <img src="assets/img/studioXP.jpg" class="img-fluid" alt="">
+              </div>
+              <p><em>Studio XP</em></p>
+              <p>Pendant mes études j'ai voulu essayé d'apprendre le jeu vidéo via UNITY, je me suis donc inscrit à Studio XP qui est une association d'apprentissage de création de
+              jeu vidéo en UNITY, C# en général et Java pour tout âge. Grâce à ces cours j'ai créé un petit jeu en 3D avec un écran d'accueil, un niveau jouable ainsi qu'une musique
+              de fond.</p>
+            </div>
           </div>
+
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Experience Professionelle</h3>
             <div class="resume-item">
