--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>iPortfolio Bootstrap Template - Index</title>
+  <title>Portefolio Avi Elbaz</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -130,14 +130,14 @@
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">HTML <i class="val">36%</i></span>
+              <span class="skill">HTML <i class="val">Maitrise basique</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="36" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">PYTHON <i class="val">68%</i></span>
+              <span class="skill">PYTHON <i class="val">Bonne maitrise</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="68" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -149,14 +149,14 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">JAVA <i class="val">42%</i></span>
+              <span class="skill">JAVA <i class="val">Maitrise basique</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="42" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">PHP <i class="val">75%</i></span>
+              <span class="skill">PHP <i class="val">Très bonne maitrise</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -279,8 +279,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/projets/LyaCar.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/projets/Lyacar.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Lyacar Web"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/projets/Lyacar.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Lyacar Web"><i class="bx bx-image"></i></a>
+                <a href="LyaCar_details.html" title="More Details"><i class="bx bx-link-alt"></i></a>
               </div>
             </div>
           </div>
@@ -289,21 +289,31 @@
             <div class="portfolio-wrap">
               <img src="assets/img/projets/autoecole.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/projets/autoecole.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="LyaCar App"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/projets/autoecole.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="LyaCar App"><i class="bx bx-image"></i></a>
+                <a href="autoecole_details.html" title="More Details"><i class="bx bx-link-alt"></i></a>
               </div>
             </div>
           </div>
 
-          <!--<div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <!--<div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+              <img src="assets/img/projets/bta.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/projets/.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/projets/bta.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Abonnement Web"><i class="bx bx-image"></i></a>
+                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link-alt"></i></a>
               </div>
             </div>
-          </div> -->
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/projets/SXP.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/projets/SXP.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="BallRun App"><i class="bx bx-image"></i></a>
+                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link-alt"></i></a>
+              </div>
+            </div>
+          </div>-->
 
         </div>
 
