ajout des projet de stage et de formation

--- a/SXP_details.html
+++ b/SXP_details.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>LyaCar Détails</title>
+    <title>Marble Run Détails</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -79,7 +79,7 @@
     </section><!-- End Breadcrumbs -->
 
     <!-- ======= Portfolio Details Section ======= -->
-    <section id="LyaCar" class="portfolio-details">
+    <section id="SXP" class="portfolio-details">
         <div class="container">
 
             <div class="row gy-4">
@@ -89,15 +89,11 @@
                         <div class="swiper-wrapper align-items-center">
 
                             <div class="swiper-slide">
-                                <img src="assets/img/projets/LyaCar.png" alt="">
+                                <img src="assets/img/projets/SXP.png" alt="">
                             </div>
 
                             <div class="swiper-slide">
-                                <img src="assets/img/projets/LyaCar_connexion.png" alt="">
-                            </div>
-
-                            <div class="swiper-slide">
-                                <img src="assets/img/projets/LyaCar_graphique.png" alt="">
+                                <img src="assets/img/projets/SXP_UI.png" alt="">
                             </div>
 
                         </div>
@@ -112,10 +108,10 @@
                     <div class="portfolio-description">
                         <h2></h2>
                         <p>
-                            Pendant mes études j'ai programmé avec deux de mes amis, un site web en PHP ainsi qu'une application JAVA d'une auto-école.
-                            Le site web devait être programmé intégralement via le Framework Symfony 5. Nous devions donc créé plusieur fonctionnalités comme l'authentification, la
-                            réservation d'une leçon pour un élève, la visualisation de son planning pour un moniteur ainsi que les statistiques d'un apprentis via des graphiques.
-                            Nous devions aussi créé un admin capable de gérer tout ce qu'il se passe, rajouter de nouvelles licence et engager du personnel.
+                            Au cours de ma 1ère année de BTS, j'ai suivis une formation d'une semaine par la société Studio XP qui propose des formation au jeu vidéo pour
+                            les jeunes. J'ai suivis le cours de Marble Run, un jeu en 3D où j'ai appris à me servir de la plateforme UNITY pour appliquer des comportements
+                            à un ou plusieurs objets comme la gravité, avoir la possibilité de se mouvoir ou encore détecter le passage d'un autre objet. Cette formation
+                            a renforcé ma passion pour le jeu vidéo et bien que ce projet soit incomplet j'ai beaucoup aimé le programmer sur UNITY.
                         </p>
                     </div>
                 </div>
@@ -128,7 +124,7 @@
 
 </main><!-- End #main -->
 
-
+<!-
 
 <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
