--- a/bta_details.html
+++ b/bta_details.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>LyaCar Détails</title>
+    <title>Boker Tov Agency Détails</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -79,7 +79,7 @@
     </section><!-- End Breadcrumbs -->
 
     <!-- ======= Portfolio Details Section ======= -->
-    <section id="LyaCar" class="portfolio-details">
+    <section id="BTA" class="portfolio-details">
         <div class="container">
 
             <div class="row gy-4">
@@ -89,15 +89,19 @@
                         <div class="swiper-wrapper align-items-center">
 
                             <div class="swiper-slide">
-                                <img src="assets/img/projets/LyaCar.png" alt="">
+                                <img src="assets/img/projets/bta_alluser.png" alt="">
                             </div>
 
                             <div class="swiper-slide">
-                                <img src="assets/img/projets/LyaCar_connexion.png" alt="">
+                                <img src="assets/img/projets/bta_login.png" alt="">
                             </div>
 
                             <div class="swiper-slide">
-                                <img src="assets/img/projets/LyaCar_graphique.png" alt="">
+                                <img src="assets/img/projets/bta_account.png" alt="">
+                            </div>
+
+                            <div class="swiper-slide">
+                                <img src="assets/img/projets/bta_abo.png" alt="">
                             </div>
 
                         </div>
@@ -112,10 +116,10 @@
                     <div class="portfolio-description">
                         <h2></h2>
                         <p>
-                            Pendant mes études j'ai programmé avec deux de mes amis, un site web en PHP ainsi qu'une application JAVA d'une auto-école.
-                            Le site web devait être programmé intégralement via le Framework Symfony 5. Nous devions donc créé plusieur fonctionnalités comme l'authentification, la
-                            réservation d'une leçon pour un élève, la visualisation de son planning pour un moniteur ainsi que les statistiques d'un apprentis via des graphiques.
-                            Nous devions aussi créé un admin capable de gérer tout ce qu'il se passe, rajouter de nouvelles licence et engager du personnel.
+                            Lors de ma 2ème année en BTS SIO, j'ai effectué un stage à Boker Tov Agency où j'ai du programmé un site internet entièrement en Symfony 5.
+                            Le site devait proposé de s'authetifier, créer un poste et rajouter des utilisateur simple dans notre liste si nous sommes un posteur.
+                            L'admin quant à lui devait pouvoir supprimer et modifier les postes et utilisateurs si ces derniers ne respectaient pas les conditions
+                            d'utilisation. Grace à ce stage j'ai pu amélioré ma maitrise du Framework Symfony et ma communication envers des associers.
                         </p>
                     </div>
                 </div>
@@ -128,7 +132,7 @@
 
 </main><!-- End #main -->
 
-
+<!-
 
 <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
