--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
         <div class="row" data-aos="fade-up">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
+              <li data-filter="*" class="filter-active">Tout</li>
               <li data-filter=".filter-app">App</li>
               <li data-filter=".filter-web">Web</li>
             </ul>
@@ -275,32 +275,32 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/projets/LyaCar.png" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/projets/Lyacar.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Lyacar Web"><i class="bx bx-image"></i></a>
-                <a href="LyaCar_details.html" title="More Details"><i class="bx bx-link-alt"></i></a>
+                <a href="LyaCar_details.html" title="Plus de détails"><i class="bx bx-link-alt"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/projets/autoecole.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/projets/autoecole.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="LyaCar App"><i class="bx bx-image"></i></a>
+                <a href="autoecole_details.html" title="Plus de détails"><i class="bx bx-link-alt"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/projets/autoecole.png" class="img-fluid" alt="">
+              <img src="assets/img/projets/bta_alluser.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/projets/autoecole.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="LyaCar App"><i class="bx bx-image"></i></a>
-                <a href="autoecole_details.html" title="More Details"><i class="bx bx-link-alt"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <!--<div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/projets/bta.png" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/projets/bta.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Abonnement Web"><i class="bx bx-image"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link-alt"></i></a>
+                <a href="assets/img/projets/bta_alluser.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Abonnement Web"><i class="bx bx-image"></i></a>
+                <a href="bta_details.html" title="Plus de détails"><i class="bx bx-link-alt"></i></a>
               </div>
             </div>
           </div>
@@ -310,10 +310,10 @@
               <img src="assets/img/projets/SXP.png" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/projets/SXP.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="BallRun App"><i class="bx bx-image"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link-alt"></i></a>
+                <a href="SXP_details.html" title="Plus de détails"><i class="bx bx-link-alt"></i></a>
               </div>
             </div>
-          </div>-->
+          </div>
 
         </div>
 
