--- a/autoecole_details.html
+++ b/autoecole_details.html
@@ -99,27 +99,27 @@
                 <div class="swiper-wrapper align-items-center">
 
                     <div class="swiper-slide">
-                        <img src="assets/img/projets/autoecole.png" alt="">
+                        <img src="assets/img/projets/autoecole.png" alt="" style="size: landscape">
                     </div>
 
                     <div class="swiper-slide">
-                        <img src="assets/img/projets/autoecole-login.png" alt="">
+                        <img src="assets/img/projets/autoecole-login.png" alt="" style="height: 550px; width: 50%">
                     </div>
 
                     <div class="swiper-slide">
-                        <img src="assets/img/projets/autoecole-planning.png" alt="">
+                        <img src="assets/img/projets/autoecole-planning.png" alt="" style="height: 600px; width: 45%">
                     </div>
 
                     <div class="swiper-slide">
-                        <img src="assets/img/projets/autoecole-lecon.png" alt="">
+                        <img src="assets/img/projets/autoecole-lecon.png" alt="" style="height: 600px; width: 40%">
                     </div>
 
                     <div class="swiper-slide">
-                        <img src="assets/img/projets/autoecole-graphiques.png" alt="">
+                        <img src="assets/img/projets/autoecole-graphiques.png" alt="" style="size: landscape">
                     </div>
 
                     <div class="swiper-slide">
-                        <img src="assets/img/projets/autoecole-admin.png" alt="">
+                        <img src="assets/img/projets/autoecole-admin.png" alt="" style="size: landscape">
                     </div>
 
                 </div>
@@ -132,21 +132,6 @@
 
 </main><!-- End #main -->
 
-<!-- ======= Footer ======= -->
-<footer id="footer">
-    <div class="container">
-        <div class="copyright">
-            &copy; Copyright <strong><span>iPortfolio</span></strong>
-        </div>
-        <div class="credits">
-            <!-- All the links in the footer should remain intact. -->
-            <!-- You can delete the links only if you purchased the pro version. -->
-            <!-- Licensing information: https://bootstrapmade.com/license/ -->
-            <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-        </div>
-    </div>
-</footer><!-- End  Footer -->
 
 <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
