--- a/SXP_details.html
+++ b/SXP_details.html
@@ -48,7 +48,7 @@
             <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
             <h1 class="text-light"><a href="index.html"> Elbaz Avi</a></h1>
             <div class="social-links mt-3 text-center">
-                <a href="https://twitter.com/Shidac3" class="twitter"><i class="bx bxl-twitter"></i></a>
+                <a href="https://github.com/MikuoShidac/" class="Github"><i class="bx bxl-github"></i></a>
                 <a href="https://www.linkedin.com/in/avi-elbaz-03b548235/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
             </div>
         </div>
