modification de cetrians paragraphes

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
         <div class="section-title">
           <h2>À propos de moi</h2>
-          <p>Je m'appelle Avi Elbaz, je suis étudiant en BTS de Service Informatique aux Organisations et je souhaite integré le developpement dans le jeu vidéo.</p>
+          <p>Je m'appelle Avi Elbaz, je suis étudiant en BTS de Service Informatique aux Organisations et je souhaite integré le developpement dans le domaine du jeu vidéo.</p>
         </div>
 
         <div class="row">
@@ -104,8 +104,8 @@
               </div>
             </div>
             <p>
-              J'étudie plusieurs langages depuis 2ans comme le PHP ou le JAVA ce qui m'a permis d'aquérir des bases et des reflèxes dans le domaine de la programmation.
-              C'est pourquoi je souhaite approfondir mes connaissances afin de réaliser mon rêve de programmeur dans le jeu vidéo.
+              J'ai étudié plusieurs langages depuis 2ans comme le PHP ou le JAVA ce qui m'a permis d'aquérir des bases et des reflèxes dans le domaine de la programmation.
+              C'est pourquoi je souhaite approfondir mes connaissances afin de devenir programmeur dans le jeu vidéo et/ou dans les nouvelles technologies.
               <br>
               <a href="assets/img/CV.pdf">Mon CV</a>
             </p>
@@ -121,7 +121,7 @@
 
         <div class="section-title">
           <h2>Compétences</h2>
-          <p>J'ai fais au cours de mes études plusieurs programme en PHP, PYTHON, HTML ou JAVA. Voici donc ma vision de maitrise sur ces langages en pourcentages.</p>
+          <p>J'ai créé au cours de mes études plusieurs programme en PHP, PYTHON, HTML ou JAVA. Voici donc ma vision de maitrise sur ces langages.</p>
           <a href="assets/img/Tableau_de_competences.pdf">Tableau de compétences</a>
         </div>
 
