Modification de la definition de mon stage chez LVMH

--- a/index.html
+++ b/index.html
@@ -222,12 +222,15 @@
                 <img src="assets/img/lvmh-logo.jpg" class="img-fluid" alt="">
               </div>
               <p><em>LVMH, Paris 8ème</em></p>
-              <p>Lors de ma première année de BTS je suis partie en stage de 1 mois dans l'entreprise LVMH où je me suis occupé de la gestion de certaines de leurs données.
+              <p>Lors de ma première année de BTS je suis partie en stage de 1 mois dans l'entreprise LVMH où je me suis occupé de la gestion de bases de données test en vérifiant si 
+                chaque colonnes étaient bien typé et si les tables arrivaient à communiquer entre elles. Par la suite j'ai dû affiché ces informations sous forme de graphique et faire 
+                le lien avec une autre base de données test.
               Grace à ce stage j'ai beaucoup appris sur les bases de données ainsi que sur leur fonctionnement.</p>
               <ul>
-                <li>Gestion de base de données via Sql Server Management Studio</li>
+                <li>Gestion de base de données via Sql Server Management Studio et affichage des données en graphiques via POWER BI</li>
                 <div class="col-lg-2" data-aos="fade-right">
                   <img src="assets/img/SSMSicon.png" class="img-fluid" alt="">
+                  <img src="assets/img/PBIicon.png" class="img-fluid" alt="">
                 </div>
               </ul>
             </div>
