Condensation des informations et modification du CV

--- a/LyaCar_details.html
+++ b/LyaCar_details.html
@@ -108,14 +108,14 @@
                 <div class="col-lg-4">
                     <div class="portfolio-info">
                         <h3>Information du projet</h3>
+                        <h4>Octobre 2022 - Janvier 2023</h4>
                     </div>
                     <div class="portfolio-description">
                         <h2></h2>
                         <p>
-                            Pendant mes études j'ai programmé avec deux de mes amis, un site web en PHP ainsi qu'une application JAVA d'une auto-école.
-                            Le site web devait être programmé intégralement via le Framework Symfony 5. Nous devions donc créé plusieur fonctionnalités comme l'authentification, la
-                            réservation d'une leçon pour un élève, la visualisation de son planning pour un moniteur ainsi que les statistiques d'un apprentis via des graphiques.
-                            Nous devions aussi créé un admin capable de gérer tout ce qu'il se passe, rajouter de nouvelles licence et engager du personnel.
+                            J'ai programmé un site web en PHP ainsi qu'une application JAVA d'auto-école.
+                            Le site web devait être programmé intégralement via le Framework Symfony 5. Il y avait plusieurs fonctionnalités à créer comme l'authentification ou la
+                            réservation d'une leçon.
                         </p>
                     </div>
                 </div>
