--- a/autoecole_details.html
+++ b/autoecole_details.html
@@ -84,15 +84,14 @@
 
             <div class="portfolio-info">
                 <h3>Information du projet</h3>
+                <h4>Novembre 2022 - Mars 2023</h4>
             </div>
             <div class="portfolio-description">
                 <h2></h2>
                 <p>
-                    Lors de ma 2ème année j'ai eu a programmé en trinomeune application et un site web pour une auto-école.
-                    L'application devait possédé plusieur fonctionnalités comme s'authentifier, réserver une leçon pour un élève, visualiser son planning consulter
-                    ses statistiques ainsi qu'un admin qui a la possibilité de gérer tout ce qu'il se passe, rajouter de nouvelles licence, modifier des informations
-                    de véhicules et engager du personnel.
-                </p>
+                    J'ai eu a programmé une application et un site d'auto-école.
+                    L'application devait avoir la possibilité de s'authentifier, consulter ses statistiques et bien d'autres.
+                    Par la suite il fallait créer un admin de tout gérer.</p>
             </div>
 
             <div class="portfolio-details-slider swiper">
