--- a/bta_details.html
+++ b/bta_details.html
@@ -112,11 +112,12 @@
                 <div class="col-lg-4">
                     <div class="portfolio-info">
                         <h3>Information du projet</h3>
+                        <h4>Janvier - Février 2023</h4>
                     </div>
                     <div class="portfolio-description">
                         <h2></h2>
                         <p>
-                            Lors de ma 2ème année en BTS SIO, j'ai effectué un stage à Boker Tov Agency où j'ai du programmé un site internet entièrement en Symfony 5.
+                            J'ai effectué un stage à Boker Tov Agency où j'ai du programmé un site internet entièrement en Symfony 5.
                             Le site devait proposé de s'authetifier, créer un poste et rajouter des utilisateur simple dans notre liste si nous sommes un posteur.
                             L'admin quant à lui devait pouvoir supprimer et modifier les postes et utilisateurs si ces derniers ne respectaient pas les conditions
                             d'utilisation. Grace à ce stage j'ai pu amélioré ma maitrise du Framework Symfony et ma communication envers des associers.
