--- a/SXP_details.html
+++ b/SXP_details.html
@@ -104,6 +104,7 @@
                 <div class="col-lg-4">
                     <div class="portfolio-info">
                         <h3>Information du projet</h3>
+                        <h4>Février 2022</h4>
                     </div>
                     <div class="portfolio-description">
                         <h2></h2>
