--- a/index.html
+++ b/index.html
@@ -79,13 +79,10 @@
 
         <div class="section-title">
           <h2>À propos de moi</h2>
-          <p>Je m'appelle Avi Elbaz, je suis étudiant en BTS de Service Informatique aux Organisations et je souhaite integré le developpement dans le domaine du jeu vidéo.</p>
+          <p>Je m'appelle Avi Elbaz, je suis étudiant en BTS de Service Informatique aux Organisations et je souhaite integré le developpement informatique.</p>
         </div>
 
-        <div class="row">
-          <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
-          </div>
+       
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Web Developpeur.</h3>
             <div class="row">
@@ -104,13 +101,13 @@
               </div>
             </div>
             <p>
-              J'ai étudié plusieurs langages depuis 2ans comme le PHP ou le JAVA ce qui m'a permis d'aquérir des bases et des reflèxes dans le domaine de la programmation.
+              J'ai étudié plusieurs langages depuis 2ans comme le PHP ou le JAVA, ce qui m'a permis d'aquérir des bases et des reflèxes dans le domaine de la programmation.
               C'est pourquoi je souhaite approfondir mes connaissances afin de devenir programmeur dans le jeu vidéo et/ou dans les nouvelles technologies.
               <br>
               <a href="assets/img/CV.pdf">Mon CV</a>
             </p>
           </div>
-        </div>
+        
 
       </div>
     </section><!-- End About Section -->
@@ -121,47 +118,45 @@
 
         <div class="section-title">
           <h2>Compétences</h2>
-          <p>J'ai créé au cours de mes études plusieurs programme en PHP, PYTHON, HTML ou JAVA. Voici donc ma vision de maitrise sur ces langages.</p>
+          <p>J'ai appris plusieurs langages grace à mon BTS ainsi qu'en autodidacte</p>
           <a href="assets/img/Tableau_de_competences.pdf">Tableau de compétences</a>
         </div>
 
         <div class="row skills-content">
 
-          <div class="col-lg-6" data-aos="fade-up">
+          <div class="col-lg-2" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">HTML <i class="val">Maitrise basique</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="36" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
+              <span class="skill"><img src="assets/img/htmllogo.png" class="img-fluid" alt=""></span>
             </div>
-
-            <div class="progress">
-              <span class="skill">PYTHON <i class="val">Bonne maitrise</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="68" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-
           </div>
 
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-2" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">JAVA <i class="val">Maitrise basique</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="42" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
+              <span class="skill"><img src="assets/img/pythonlogo.png" class="img-fluid" alt=""></span>
             </div>
+          </div>
+
+          <div class="col-lg-2" data-aos="fade-up" data-aos-delay="200">
 
             <div class="progress">
-              <span class="skill">PHP <i class="val">Très bonne maitrise</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
+              <span class="skill"><img src="assets/img/javalogo.png" class="img-fluid" alt=""></span>
             </div>
+          </div>
 
+          <div class="col-lg-2" data-aos="fade-up" data-aos-delay="300">
+
+            <div class="progress">
+              <span class="skill"><img src="assets/img/phplogo.png" class="img-fluid" alt=""></span>
+            </div>
+          </div>
+
+          <div class="col-lg-2" data-aos="fade-up" data-aos-delay="400">
+
+            <div class="progress">
+              <span class="skill"><img src="assets/img/jslogo.png" class="img-fluid" alt=""></span>
+            </div>
           </div>
 
         </div>
@@ -182,7 +177,7 @@
             <h3 class="resume-title">Résumé</h3>
             <div class="resume-item pb-0">
               <h4>Elbaz Avi</h4>
-              <p>Je suis un jeune adulte passioné de jeux vidéo et de programmations, je souhaite à mon tour en programmer pour apporter du bonheur aux joueurs.</p>
+              <p>Je suis un jeune adulte passioné de jeux vidéo et de programmations, je souhaite à mon tour programmer des jeux vidéos pour apporter du bonheur aux joueurs.</p>
               <ul>
                 <li>31 rue Jean Pierre Timbaud, Drancy, France</li>
                 <li>06 95 09 14 00</li>
@@ -193,7 +188,7 @@
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>BTS SIO Slam</h4>
-              <h5>2021 - 2023</h5>
+              <h5>Septembre 2021 - Juin 2023</h5>
               <p><em>Lycée ORT Daniel Mayer, Montreuil</em></p>
               <p>J'ai débuté mon apprentissage informatique en 2021 dans l'établissement ORT Daniel Mayer, où mes proffesseurs m'ont apprit la logique algorythmique et
                 comment programmer différents langages.</p>
@@ -202,14 +197,13 @@
             <h3 class="resume-title">Formation</h3>
             <div class="resume-item">
               <h4>Apprentissage UNITY</h4>
-              <h5>10/02/2022 - 15/02/2022</h5>
+              <h5>Février 2022</h5>
               <div class="col-lg-2" data-aos="fade-right">
                 <img src="assets/img/studioXP.jpg" class="img-fluid" alt="">
               </div>
               <p><em>Studio XP</em></p>
-              <p>Pendant mes études j'ai voulu essayé d'apprendre le jeu vidéo via UNITY, je me suis donc inscrit à Studio XP qui est une association d'apprentissage de création de
-              jeu vidéo en UNITY, C# en général et Java pour tout âge. Grâce à ces cours j'ai créé un petit jeu en 3D avec un écran d'accueil, un niveau jouable ainsi qu'une musique
-              de fond.</p>
+              <p>Pendant mes études j'ai voulu apprendre le jeu vidéo via UNITY, je me suis donc inscrit à Studio XP qui est une école virtuelle voué à apprentissage de création de
+              jeu vidéo sous UNITY et Java. Grâce à ces cours j'ai créé un petit jeu en 3D d'un niveau.</p>
             </div>
           </div>
 
@@ -217,38 +211,41 @@
             <h3 class="resume-title">Experience Professionelle</h3>
             <div class="resume-item">
               <h4>Stage en gestion de base de donnée</h4>
-              <h5>2022</h5>
+              <h5>Mai - Juin 2022</h5>
               <div class="col-lg-4" data-aos="fade-right">
                 <img src="assets/img/lvmh-logo.jpg" class="img-fluid" alt="">
               </div>
               <p><em>LVMH, Paris 8ème</em></p>
-              <p>Lors de ma première année de BTS je suis partie en stage de 1 mois dans l'entreprise LVMH où je me suis occupé de la gestion de bases de données test en vérifiant si 
-                chaque colonnes étaient bien typé et si les tables arrivaient à communiquer entre elles. Par la suite j'ai dû affiché ces informations sous forme de graphique et faire 
-                le lien avec une autre base de données test.
+              <p>J'ai effectué un stage de 1 mois dans l'entreprise LVMH en tant que Data analyst où je faisais de la gestion sur des bases de données test.
+                Puis j'ai dû affiché les informations de ces bases test sous forme de graphique et faire le lien avec une autre de ces bases.
               Grace à ce stage j'ai beaucoup appris sur les bases de données ainsi que sur leur fonctionnement.</p>
               <ul>
                 <li>Gestion de base de données via Sql Server Management Studio et affichage des données en graphiques via POWER BI</li>
-                <div class="col-lg-2" data-aos="fade-right">
-                  <img src="assets/img/SSMSicon.png" class="img-fluid" alt="">
-                  <img src="assets/img/PBIicon.png" class="img-fluid" alt="">
+                <div class="row logo2">
+                  <div class="col-lg-2" data-aos="fade-right">
+                    <img src="assets/img/SSMSicon.png" class="img-fluid" alt="">
+                  </div>
+                  <div class="col-lg-2" data-aos="fade-right">
+                    <img src="assets/img/PBIicon.png" class="img-fluid" alt="">
+                  </div>
                 </div>
               </ul>
             </div>
             <div class="resume-item">
               <h4>Stage Création de visuels et d'un site web</h4>
-              <h5>2023</h5>
+              <h5>Janvier - Février 2023</h5>
               <div class="col-lg-3" data-aos="fade-right">
                 <img src="assets/img/bokertovagencylogo.png" class="img-fluid" alt="">
               </div>
               <p><em>Boker Tov Agency, Montreuil</em></p>
               <ul>
-                <p>Pendant ma 2ème année de BTS j'ai effectué un stage dans l'entreprise Boker Tov Agency pour programmer un site web et concevoir des visuels publicitaires.</p>
-                <li>Conception de visuels</li>
+                <p>J'ai également effectué un stage dans l'entreprise Boker Tov Agency en tant que Développeur Web et pour concevoir des visuels publicitaires.</p>
+                <li>Conception des visuels</li>
                 <p>J'ai utilisé le site internet Canva.com afin de concevoir des visuels attrayants et vendeurs pour diverts petites entreprises pour qu'ils puissent avoir
-                  une base publicitaire et ainsi se faire connaitre grace aux résaux sociaux.</p>
+                  une base publicitaire.</p>
                 <li>Programation d'un site web</li>
                 <p>Cette tache consistait à programmer un site internet uniquement avec le Framework Symfony 5 afin d'avoir un site bien structuré et sécurisé. Malgré quelques
-                erreurs durant la programmation, le site fonctionne parfaitement même si non finit, cela m'a aidé à mieux maitrise Symfony 5.</p>
+                erreurs durant la programmation, le site fonctionne parfaitement même si non finit.</p>
               </ul>
             </div>
           </div>
