mise à jour du portefolio

--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
 
         <div class="section-title">
           <h2>À propos de moi</h2>
-          <p>Je m'appelle Avi Elbaz, je suis étudiant en BTS de Service Informatique aux Organisations et je souhaite integré le developpement informatique.</p>
+          <p>Je m'appelle Avi Elbaz, je suis étudiant en E-communication et je suis diplômé d'un BTS de Services Informatiques aux Organisations.
+            <br>Mon objectif est de devenir chef de projet web.</p>
         </div>
 
        
@@ -94,15 +95,15 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>19 ans</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Diplôme:</strong> <span>Baccalauréat</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21 ans</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Diplômes:</strong> <span>Baccalauréat, BTS SIO</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>avie2204@gmail.com</span></li>
                 </ul>
               </div>
             </div>
             <p>
-              J'ai étudié plusieurs langages depuis 2ans comme le PHP ou le JAVA, ce qui m'a permis d'aquérir des bases et des reflèxes dans le domaine de la programmation.
-              C'est pourquoi je souhaite approfondir mes connaissances afin de devenir programmeur dans le jeu vidéo et/ou dans les nouvelles technologies.
+              J'ai étudié plusieurs langages de programmation comme le PHP, le JavaScript, l'HTML, etc...  ce qui m'a permis d'aquérir des reflèxes ainsi qu'une certaine rigueur dans mon travail.
+              <br>C'est pourquoi je souhaite approfondir mes connaissances du monde professionnel et managerial afin de devenir chef de projet web.
               <br>
               <a href="assets/img/CV.pdf">Mon CV</a>
             </p>
@@ -118,8 +119,6 @@
 
         <div class="section-title">
           <h2>Compétences</h2>
-          <p>J'ai appris plusieurs langages grace à mon BTS ainsi qu'en autodidacte</p>
-          <a href="assets/img/Tableau_de_competences.pdf">Tableau de compétences</a>
         </div>
 
         <div class="row skills-content">
@@ -127,35 +126,40 @@
           <div class="col-lg-2" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill"><img src="assets/img/htmllogo.png" class="img-fluid" alt=""></span>
+              <h3><strong>HTML</strong></h3>
+              <span class="skill"><img src="assets/img/htmllogo.png" class="img-fluid" alt="HTML5"></span>
             </div>
           </div>
 
           <div class="col-lg-2" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill"><img src="assets/img/pythonlogo.png" class="img-fluid" alt=""></span>
+              <h3><strong>Python</strong></h3>
+              <span class="skill"><img src="assets/img/pythonlogo.png" class="img-fluid" alt="PYTHON"></span>
             </div>
           </div>
 
           <div class="col-lg-2" data-aos="fade-up" data-aos-delay="200">
 
             <div class="progress">
-              <span class="skill"><img src="assets/img/javalogo.png" class="img-fluid" alt=""></span>
+              <h3><strong>Java</strong></h3>
+              <span class="skill"><img src="assets/img/javalogo.png" class="img-fluid" alt="JAVA"></span>
             </div>
           </div>
 
           <div class="col-lg-2" data-aos="fade-up" data-aos-delay="300">
 
             <div class="progress">
-              <span class="skill"><img src="assets/img/phplogo.png" class="img-fluid" alt=""></span>
+              <h3><strong>PHP</strong></h3>
+              <span class="skill"><img src="assets/img/phplogo.png" class="img-fluid" alt="PHP"></span>
             </div>
           </div>
 
           <div class="col-lg-2" data-aos="fade-up" data-aos-delay="400">
 
             <div class="progress">
-              <span class="skill"><img src="assets/img/jslogo.png" class="img-fluid" alt=""></span>
+              <h3><strong>JavaScript</strong></h3>
+              <span class="skill"><img src="assets/img/jslogo.png" class="img-fluid" alt="JAVASCRIPT"></span>
             </div>
           </div>
 
@@ -177,7 +181,7 @@
             <h3 class="resume-title">Résumé</h3>
             <div class="resume-item pb-0">
               <h4>Elbaz Avi</h4>
-              <p>Je suis un jeune adulte passioné de jeux vidéo et de programmations, je souhaite à mon tour programmer des jeux vidéos pour apporter du bonheur aux joueurs.</p>
+              <p>Je suis passioné de jeux vidéo et de nouvelles technologies, je souhaite créer des sites et application afin d'améliorer et faciliter l'accès à des services en ligne.</p>
               <ul>
                 <li>31 rue Jean Pierre Timbaud, Drancy, France</li>
                 <li>06 95 09 14 00</li>
@@ -185,7 +189,7 @@
               </ul>
             </div>
 
-            <h3 class="resume-title">Education</h3>
+            <h3 class="resume-title">Formation</h3>
             <div class="resume-item">
               <h4>BTS SIO Slam</h4>
               <h5>Septembre 2021 - Juin 2023</h5>
@@ -193,17 +197,26 @@
               <p>J'ai débuté mon apprentissage informatique en 2021 dans l'établissement ORT Daniel Mayer, où mes proffesseurs m'ont apprit la logique algorythmique et
                 comment programmer différents langages.</p>
             </div>
-
-            <h3 class="resume-title">Formation</h3>
             <div class="resume-item">
               <h4>Apprentissage UNITY</h4>
               <h5>Février 2022</h5>
-              <div class="col-lg-2" data-aos="fade-right">
+              <div class="col-lg-2" data-aos="fade-left">
                 <img src="assets/img/studioXP.jpg" class="img-fluid" alt="">
               </div>
               <p><em>Studio XP</em></p>
               <p>Pendant mes études j'ai voulu apprendre le jeu vidéo via UNITY, je me suis donc inscrit à Studio XP qui est une école virtuelle voué à apprentissage de création de
               jeu vidéo sous UNITY et Java. Grâce à ces cours j'ai créé un petit jeu en 3D d'un niveau.</p>
+            </div>
+            <div class="resume-item">
+              <h4>Licence informatique</h4>
+              <h5>Octobre 2023 - Mai 2024</h5>
+              <div class="col-lg-2" data-aos="fade-left">
+                <img src="assets/img/supinfo_logo.jpg" class="img-fluid" alt="">
+              </div>
+              <p><em>École des métiers de l'informatique, Supinfo, Paris 11ème</em></p>
+              <p>À la sortie de mon BTS SIO je me suis orienté sur une licence en informatique en alternance au sein de l'école Supinfo. J'y ai beaucoup apprit que se soit sur le côté gestion, programmation ou encore managérial.
+                <br>Cependant je me suis réorienté afin d'acquérir plus d'expérience dans le domaine de la gestion et communication informatique.
+              </p>
             </div>
           </div>
 
@@ -212,7 +225,7 @@
             <div class="resume-item">
               <h4>Stage en gestion de base de donnée</h4>
               <h5>Mai - Juin 2022</h5>
-              <div class="col-lg-4" data-aos="fade-right">
+              <div class="col-lg-4" data-aos="fade-left">
                 <img src="assets/img/lvmh-logo.jpg" class="img-fluid" alt="">
               </div>
               <p><em>LVMH, Paris 8ème</em></p>
@@ -222,10 +235,10 @@
               <ul>
                 <li>Gestion de base de données via Sql Server Management Studio et affichage des données en graphiques via POWER BI</li>
                 <div class="row logo2">
-                  <div class="col-lg-2" data-aos="fade-right">
+                  <div class="col-lg-2" data-aos="fade-left">
                     <img src="assets/img/SSMSicon.png" class="img-fluid" alt="">
                   </div>
-                  <div class="col-lg-2" data-aos="fade-right">
+                  <div class="col-lg-2" data-aos="fade-left">
                     <img src="assets/img/PBIicon.png" class="img-fluid" alt="">
                   </div>
                 </div>
@@ -234,7 +247,7 @@
             <div class="resume-item">
               <h4>Stage Création de visuels et d'un site web</h4>
               <h5>Janvier - Février 2023</h5>
-              <div class="col-lg-3" data-aos="fade-right">
+              <div class="col-lg-3" data-aos="fade-left">
                 <img src="assets/img/bokertovagencylogo.png" class="img-fluid" alt="">
               </div>
               <p><em>Boker Tov Agency, Montreuil</em></p>
@@ -246,6 +259,21 @@
                 <li>Programation d'un site web</li>
                 <p>Cette tache consistait à programmer un site internet uniquement avec le Framework Symfony 5 afin d'avoir un site bien structuré et sécurisé. Malgré quelques
                 erreurs durant la programmation, le site fonctionne parfaitement même si non finit.</p>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Mise à niveau du site web de l'entreprise</h4>
+              <h5>Février 2024 - Septembre 2024 (Toujours actif)</h5>
+              <div class="col-lg-3" data-aos="fade-left">
+                <img src="assets/img/Avlis-logo.png" class="img-fluid" alt="">
+              </div>
+              <p><em>Avlis Formation, Enghiens les bains / Paris 19ème</em></p>
+              <ul>
+                <p>En parrallèle de ma licence, je travaillais en alternance dans le centre de formation Avlis, dans lequel j'ai pu mieux comprendre le monde professionnel au sein d'une équipe.</p>
+                <li>Programmation de composants d'un projet</li>
+                <p>Afin de rénover le site d'Avlis, nous avons utilisé le framework Laravel permettant une meilleurs arborescence de projet ainsi que l'implémentation de composants programmés à part.</p>
+                <li>Mise en place d'utilitaires</li>
+                <p>Le site primaire d'Avlis ayant été devloppé sur plusieurs années, nécessite le mise en place d'utilitaires afin de mieux comprendre le travail fournit par les anciens devloppeurs</p>
               </ul>
             </div>
           </div>
